2018-06-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (_convert):
	When checking if a node name in a cross-reference includes a
	`.', do not include in the check any manual name that may have 
	already been stored inside the paragraph formatter.  Rical Jasan 
	reported that an error message mentioning the "node name" would 
	be given for output like "(gcc.info)Debugging Options" which is 
	confusing as the `.' is not in the node name "Debugging 
	Options".  (bug-texinfo 2018-02-09)

2018-06-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (info_node_of_tag_ext): Always call 
	node_set_body_start regardless of the value of 
	preprocess_nodes_p.  Benno Schulenberg reported that searching 
	commands could find matches in the node information line if the 
	use set "hide-note-references=On".

2018-06-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\pdfgettoks): Add a comment.

2018-03-10  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/texinfo.tex, contrib/psfonts-bronger.tex: Replace 
	"write-file-hooks" with "before-save-hook".
	See https://lists.gnu.org/r/bug-gnulib/2018-03/msg00008.html.

2018-01-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* README-hacking: Mention js/ subdirectory.
	* js/README: Explain how to get git history of this project and 
	refer to some background info on the web.

2018-01-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\definefontsizexi, \definefontsizex):
	Add new set of fonts \sevenrm, \seventt, \sevenbf, \sevenit,
	\sevensl, \sevensf \sevensc, \seventtsl, \seveni, \sevensy.
	(\resetmathfonts): Use them for math mode superscript.
	Vincent Lefevre reported that @var didn't work in superscript in 
	math mode (bug-texinfo, 2017-11-27).

2018-01-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\assignfonts): Add a comment explaining 
	purpose of \ifont and \syfont.

2017-12-26  Gavin Smith  <gavinsmith0123@gmail.com>
